# migratecore

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: SPEC.md
scripts/: fetch-license.sh
src/migratecore/: __init__.py  analyzer.py  cli.py  client.py  models.py  pricing.py  report.py
src/migratecore/data/: sample_usage.json
tests/: test_analyzer.py
